fix image z-index

--- a/src/components/ChampionMastery.css
+++ b/src/components/ChampionMastery.css
@@ -40,6 +40,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 3;
 }
 
 .championImage {
